# Yoga-Mode-Daemon

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  ec-access.h  yoga-mode-switch.cpp
